test/test_units/test_kclvm/test_types/invalid_test_data/loop/loop_2.k
a: {str:} = {i: "value" for i in [{"name": "value"}, {"name": "value"}]}
